Auth terminado, gateway terminada, falta carrito y frontend